# rugby-results

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/linters/: .mypy.ini
.github/workflows/: nox.yml  test.yml
py_template/: a.py
results/scrape/: scraper.py
tests/: test_dummy.py
